...
                                                            .fromSTEB(0.0, 0.0,
                                                                0.0, 16.0),
                                                    child: Container(
                                                      width: double.infinity,
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'emailAddress_Create_ixlz'),
                                                        controller: _model
                                                            .emailAddressCreateController,
                                                        focusNode: _model
                                                            .emailAddressCreateFocusNode,
                                                        autofocus: true,
                                                        autofillHints: [
...
                                                            .fromSTEB(0.0, 0.0,
                                                                0.0, 16.0),
                                                    child: Container(
                                                      width: double.infinity,
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'password_Create_5g88'),
                                                        controller: _model
                                                            .passwordCreateController,
                                                        focusNode: _model
                                                            .passwordCreateFocusNode,
                                                        autofocus: true,
                                                        autofillHints: [
...
                                                            .fromSTEB(0.0, 0.0,
                                                                0.0, 16.0),
                                                    child: Container(
                                                      width: double.infinity,
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'password_Create2_9jh4'),
                                                        controller: _model
                                                            .passwordCreate2Controller,
                                                        focusNode: _model
                                                            .passwordCreate2FocusNode,
                                                        autofocus: true,
                                                        autofillHints: [
...
                                                                  0.0,
                                                                  0.0,
                                                                  0.0,
                                                                  16.0),
                                                      child: FFButtonWidget(
                                                        key: ValueKey(
                                                            'Button_x1f8'),
                                                        onPressed: () async {
                                                          GoRouter.of(context)
                                                              .prepareAuthEvent();
                                                          if (_model
                                                                  .passwordCreateController
                                                                  .text !=
...
                                                            .fromSTEB(0.0, 0.0,
                                                                0.0, 16.0),
                                                    child: Container(
                                                      width: double.infinity,
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'emailAddress_49sr'),
                                                        controller: _model
                                                            .emailAddressController,
                                                        focusNode: _model
                                                            .emailAddressFocusNode,
                                                        autofocus: true,
                                                        autofillHints: [
...
                                                            .fromSTEB(0.0, 0.0,
                                                                0.0, 16.0),
                                                    child: Container(
                                                      width: double.infinity,
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'password_jm7y'),
                                                        controller: _model
                                                            .passwordController,
                                                        focusNode: _model
                                                            .passwordFocusNode,
                                                        autofocus: true,
                                                        autofillHints: [
...
                                                                  0.0,
                                                                  0.0,
                                                                  0.0,
                                                                  16.0),
                                                      child: FFButtonWidget(
                                                        key: ValueKey(
                                                            'Button_9kt9'),
                                                        onPressed: () async {
                                                          GoRouter.of(context)
                                                              .prepareAuthEvent();

                                                          final user =
                                                              await authManager
...
