...
                      mainAxisSize: MainAxisSize.max,
                      children: [
                        Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              0.0, 20.0, 0.0, 0.0),
                          child: Text(
                            key: ValueKey('Text_lcim'),
                            valueOrDefault<String>(
                              videoMoviesRow?.name,
                              'Database error',
                            ),
                            style: FlutterFlowTheme.of(context).headlineLarge,
                          ),
...
